--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "watchify": "^2.1.1"
   },
   "scripts": {
-    "start": "node server.js",
-    "watch": "watchify -o js/bundle.js -v -d js/app.js",
+    "start": "watchify -o js/bundle.js -v -d js/app.js",
     "build": "browserify . -t [envify --NODE_ENV production] | uglifyjs -cm > js/bundle.min.js",
     "test": "jest"
   },
